# scaffold-mcp-agent

./: README.md  docker-compose.yml
agent-orchestrator/: Dockerfile  Makefile  package-lock.json  package.json  tsconfig.json
agent-orchestrator/src/: index.ts
crewai-orchestrator/: .gitignore  Dockerfile  Makefile  pyproject.toml
crewai-orchestrator/src/: app.py  crew.py  main.py
langgraph-orchestrator/: .gitignore  Makefile  json-loader.mjs  package-lock.json  package.json
langgraph-orchestrator/src/: index.ts
mcp-airbnb-server/: Dockerfile  Makefile  index.ts  package-lock.json  package.json
mcp-client-space-server/: Makefile  package-lock.json  package.json
mcp-client-space-server/src/: index.ts
mcp-figma-server/: Dockerfile  Makefile  package-lock.json
mcp-n8n-salesforce-server/: Dockerfile  Makefile  package-lock.json  package.json
mcp-n8n-salesforce-server/src/: index.ts
mcp-rag-server/: Dockerfile  package-lock.json  package.json
mcp-salesforce-server/: Dockerfile  Makefile  package-lock.json  package.json
mcp-salesforce-server/src/: index.ts
mcp-salesforce-server/src/tools/: executeAnonymous.ts  manageDebugLogs.ts  searchAll.ts  writeApexTrigger.ts
openai-agents-orchestrator/: Dockerfile  Makefile  README.md  pyproject.toml
openai-agents-orchestrator/src/: main.py  mcp_agent.config.yaml
widget/: Dockerfile  package-lock.json  package.json
widget/src/: index.tsx
widget/src/Components/Chatbot/: Chatbot.tsx
widget/src/Components/app/: App.tsx
widget/src/hooks/: useFetch.ts
widget/src/lib/: index.css  index.html  init.js  main.tsx
