[tool.poetry]
name = "crewai_orchestrator"
version = "0.1.0"
description = "crewai-orchestrator using crewAI and MCP"
authors = ["Eduardo Castillo eduardocastillo@creai.mx"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = { version = ">=0.108.0,<1.0.0", extras = ["tools"] }
fastapi = "^0.115.11"
uvicorn = "^0.34.0"

[tool.poetry.dev-dependencies]
#

[tool.poetry.scripts]
crewai_orchestrator = "main:run"
run_crew = "main:run"
train = "main:train"
replay = "main:replay"
test = "main:test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.crewai]
type = "crew"
