[tool.poetry]
name = "crewai_orchestrator"
version = "0.1.0"
description = "crewai-orchestrator using crewAI and MCP"
authors = ["Eduardo Castillo eduardocastillo@creai.mx"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
crewai = { version = ">=0.108.0,<1.0.0", extras = ["tools"] }
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
mcp = "^1.5.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
start-app = "uvicorn src.main:app"

[[tool.poetry.packages]]
include = "*"
from = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.crewai]
type = "crew"
